=== 3.8 / ??

* Minor enhancements
  * RDoc::Parser::C can now discover methods on ENV and ARGF.
  * RDoc::Parser::C now knows about rb_cSocket and rb_mDL.
  * RDoc::Parser::C now supports :doc: and :nodoc: for class comments
* Bug fixes
  * Updating Object in an ri data store with new data now removes methods,
    includes, constants and aliases.

=== 3.7 / 2011-06-27

* Minor enhancements
  * New directive :category: which allows methods to be grouped into sections
    more cleanly.  See RDoc::Markup for details.
  * Document-class for RDoc::Parser::C now supports Foo::CONST as well as
    CONST.
  * ri method output is now a comma-separated list when displayed
    interactively.  Pull Request #39 by Benoit Daloze.
  * RDoc::ClassModule#merge now prefers the argument's information over the
    receiver's (it now behaves like Hash#merge! instead of a backwards
    Hash#merge!).
  * RDoc::Markup#convert now accepts an RDoc::Markup::Document instance
  * RDoc now owns the code for generating RDoc and ri data when gems install
  * Added RDoc::RDoc::reset
  * Added RDoc::CodeObject#file_name
* Bug fixes
  * ri no longer crashes when attempting to complete a plain [.
  * ri data now tracks which file information came from so it can process
    removals and changes to:
    * Classes and Modules
    * Methods
    * Attributes
    * Includes
    * Constants
    You will need to rebuild your ri data for it to update properly.  Issue
    #21 by Sven Riedel
  * Signal and SignalException no longer clobber each other
  * RDoc::Parser::C no longer creates classes when processing aliases.
  * RDoc::Text#strip_stars handles Document-method for methods with =, ! and ?
    now.
  * RDoc::Parser::C now allows .cpp files to be used with the "in" comment on
    rb_define_method.  Bug #35 by Hanmac.
  * RDoc::Parser::Ruby no longer eats content when =begin/=end documentation
    blocks are followed by a documentable item.  Issue #41 by mfn.